--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webview_flutter: ^4.2.4
+  webviewx: ^0.2.2
+  #webview_flutter: ^4.2.4
 
 dev_dependencies:
   flutter_test:
