--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  webviewx: ^0.2.2
+  webviewx: 
+    git:
+      https://github.com/AMS-CPayne/webviewx
   #webview_flutter: ^4.2.4
 
 dev_dependencies:
